# TTTBot

./: .gitignore  README.md  pyproject.toml
data/: default_config.yml
templates/: sign_up_header.txt
tttbot/: __init__.py  bot.py
tttbot/interfaces/: cli.py
tttbot/utils/: __init__.py  config.py
