[tool.poetry]
name = "tttbot"
version = "0.1.0"
description = ""
authors = ["Adam Hardy <adh167@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
"discord.py" = "^1.7.3"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tttbot = "tttbot.interfaces.cli:main"